--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,8 +1,8 @@
 .cards {
-  padding: 20px;
   max-width: 1280px;
   margin: 0 auto;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  padding: 20px 0 40px 0;
 }
 .cards__list {
   list-style-type: none;
@@ -15,10 +15,11 @@
 }
 @media screen and (max-width: 627px) {
   .cards {
-    width: auto;
+    width: fit-content;
     height: auto;
   }
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px 20px;
   }
 }
