--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,9 @@
-.footer {
+.footer__text {
   text-align: center;
-  padding: 25px 0;
+  padding: 60px 0;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: #212121b2;
 }
