--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,20 +8,19 @@
   height: 190px;
   width: 190px;
   margin-right: 20px;
-  border-radius: 8%;
+  border-radius: 8px;
 }
 .profile__column {
   display: flex;
   flex-direction: column;
-  border-radius: 8%;
   margin-right: 20px;
   width: 420px;
-  height: 190px;
 }
 .profile__name {
   margin: 0 0 12px;
   font-weight: 500;
   font-size: 32px;
+  color: #212121;
   line-height: 1;
   display: -webkit-box;
   overflow: hidden;
@@ -38,8 +37,17 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
+  color: #212121;
+  opacity: 0.7;
 }
 .profile__edit-btn {
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
+  color: #212121;
   margin-top: auto;
   opacity: 0.7;
   transition: opacity 0.3s ease-in-out;
@@ -47,6 +55,7 @@
   display: flex;
   width: 50%;
   border: 0px;
+  padding: 0;
   background-color: rgba(255, 255, 255, 0);
 }
 .profile__edit-btn:hover {
@@ -56,34 +65,41 @@
 .profile__add-btn {
   margin-left: auto;
   margin-top: auto;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
   width: 149px;
   height: 52px;
   border-radius: 8px;
-  color: white;
-  background-color: black;
+  color: #fcf5e5;
+  background-color: #212121;
   cursor: pointer;
   display: flex;
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
+  border: 0;
 }
 .profile__add-btn:hover {
   opacity: 80%;
   cursor: pointer;
 }
-.btn__text {
+.profile__add-text {
   height: 16px;
   width: 76px;
   text-align: center;
-}
-.np__group {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+  color: rgba(252, 245, 229, 1);
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   flex-grow: 1;
 }
 .profile__icon {
-  max-block-size: 12px;
-  margin-right: 5px;
+  width: 12px;
+  border: 2px;
+  left: 20px;
+  position: relative;
+  bottom: 1.5px;
 }
 @media screen and (max-width: 627px) {
   .profile {
@@ -92,7 +108,6 @@
     align-items: center;
     text-align: center;
     padding-top: 20px;
-    height: 274px;
   }
   .profile__avatar {
     margin: 0 0 12px;
@@ -106,7 +121,6 @@
   }
   .profile__description {
     margin: 0 0 32px;
-    font-size: 16px;
     max-width: 288px;
   }
   .profile__column {
@@ -116,10 +130,21 @@
   .profile__add-btn {
     margin: 0;
     width: 100%;
-    padding: 24px 0;
+    padding: 18px 32px;
   }
   .profile__edit-btn {
     margin: auto;
     width: 120px;
+  }
+  .profile__add-text {
+    position: relative;
+    bottom: 15px;
+  }
+  .profile__icon {
+    width: 12px;
+    border: 2px;
+    left: 60px;
+    position: relative;
+    bottom: 0.7px;
   }
 }
