--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,6 +17,7 @@
   .cards {
     width: fit-content;
     height: auto;
+    padding-bottom: 20px;
   }
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
