--- a/blocks/card.css
+++ b/blocks/card.css
@@ -37,11 +37,11 @@
   white-space: nowrap;
   overflow: hidden;
   color: #212121;
-  max-width: fit-content;
+  max-width: 353px;
 }
 @media screen and (max-width: 627px) {
   .card {
-    min-width: 288px;
+    width: 288px;
   }
   .card__image {
     height: 288px;
@@ -49,10 +49,8 @@
   }
   .card__content {
     width: 288px;
-    height: 18px;
   }
   .card__title {
-    font-weight: 500;
     font-size: 16px;
     line-height: 100%;
   }
