--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,4 +1,4 @@
-.footer__text {
+.footer {
   text-align: center;
   padding: 60px 0;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
@@ -6,4 +6,5 @@
   font-size: 16px;
   line-height: 100%;
   color: #212121b2;
+  margin: 0;
 }
