--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -80,6 +80,8 @@
   padding: 16px 12px;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.4);
+  font-size: 20px;
+  line-height: 1;
 }
 .model__input::placeholder {
   color: rgba(33, 33, 33, 0.3);
@@ -95,11 +97,12 @@
   font-weight: 500;
   font-size: 16px;
   cursor: pointer;
+  border: none;
 }
 @media screen and (max-width: 627px) {
   .modal__container {
     max-width: 276px;
-    padding: 12px;
+    padding: 22px 12px 12px;
   }
 
   .modal__form {
@@ -111,16 +114,18 @@
   }
   .modal__label {
     max-width: 276px;
+    margin-bottom: 24px;
   }
 
   .modal__close-btn {
-    top: 1px;
-    right: 1px;
+    top: 22px;
+    right: 12px;
   }
   .modal__submit-btn {
     max-width: 276px;
   }
   .modal__input {
     max-width: 248px;
+    font-size: 16px;
   }
 }
