--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,6 +27,7 @@
 .card__like-button_active {
   background-image: url(../images/like\ state.svg);
   opacity: 1;
+  background-repeat: no-repeat;
 }
 
 .card__like-button:hover {
